Overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ blockquote {
 }
 
 .container {
-    max-width: 990px;
+    width: 990px;
     margin: 0 auto;
     overflow: auto;
 }
